# slagent-cli

./: README.md  README_ja.md  pyproject.toml  slagent.py
.github/workflows/: release.yml
