[project]
name = "slagent"
version = "0.1.0"
description = "Slack CLI tool using Web API with User Token"
requires-python = ">=3.10"
dependencies = [
    "slack_sdk>=3.0",
    "click>=8.0",
]

[project.scripts]
slagent = "slagent:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
